Prefer Path#of over Paths#get (#9257)