@@ -4,13 +4,13 @@ import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.is;
 
 import java.io.File;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 
 final class PathClientSettingTest {
   private final PathClientSetting clientSetting =
-      new PathClientSetting("name", Paths.get("/path", "to", "file"));
+      new PathClientSetting("name", Path.of("/path", "to", "file"));
 
   @Nested
   final class EncodeValueTest {
@@ -18,12 +18,12 @@ final class PathClientSettingTest {
     void shouldReturnEncodedValue() {
       final String separator = File.separator;
       assertThat(
-          clientSetting.encodeValue(Paths.get("/absolute", "path", "to", "file")),
+          clientSetting.encodeValue(Path.of("/absolute", "path", "to", "file")),
           is(
               String.format(
                   "%sabsolute%spath%sto%sfile", separator, separator, separator, separator)));
       assertThat(
-          clientSetting.encodeValue(Paths.get("relative", "path", "to", "file")),
+          clientSetting.encodeValue(Path.of("relative", "path", "to", "file")),
           is(String.format("relative%spath%sto%sfile", separator, separator, separator)));
     }
   }
@@ -34,10 +34,10 @@ final class PathClientSettingTest {
     void shouldReturnPath() {
       assertThat(
           clientSetting.decodeValue("/absolute/path/to/file"),
-          is(Paths.get("/absolute", "path", "to", "file")));
+          is(Path.of("/absolute", "path", "to", "file")));
       assertThat(
           clientSetting.decodeValue("relative/path/to/file"),
-          is(Paths.get("relative", "path", "to", "file")));
+          is(Path.of("relative", "path", "to", "file")));
     }
   }
 }
