@@ -5,7 +5,6 @@ import static org.hamcrest.Matchers.emptyString;
 import static org.hamcrest.Matchers.is;
 
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Optional;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
@@ -15,7 +14,7 @@ final class SelectionComponentUiUtilsTest {
   final class ToStringOfOptionalPathTest {
     @Test
     void shouldReturnAbsolutePathWhenPresent() {
-      final Path path = Paths.get(".");
+      final Path path = Path.of(".");
 
       assertThat(
           SelectionComponentUiUtils.toString(Optional.of(path)),
